Move bulk import bucket into its own stack